Updated margins for correct display on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -96,6 +96,8 @@ body {
     .aligned-list {
         flex-direction: column;
         align-items: center;
+    }
+    h1 {
         margin-top: 120px;
     }
 }
@@ -208,6 +210,7 @@ section p {
 .aligned-list {
     display: flex;
     gap: 2rem;
+    margin-top: 2rem;
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
